--- a/vignettes/agradecimentos.Rmd
+++ b/vignettes/agradecimentos.Rmd
@@ -2,7 +2,7 @@
 title: "agradecimentos"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{patrocinadores}
+  %\VignetteIndexEntry{agradecimentos}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
